--- a/busybox-http-nfs/nfs-pv.yaml
+++ b/busybox-http-nfs/nfs-pv.yaml
@@ -1,13 +1,12 @@
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: nfs
+  name: nfs-vol0
 spec:
   capacity:
     storage: 10Mi
   accessModes:
     - ReadWriteMany
   nfs:
-    # FIXME: use the right IP
     server: buildserver
-    path: "/"
+    path: "/var/nfsshare/vol0"
