--- a/busybox-http-nfs/nfs-web-rc.yaml
+++ b/busybox-http-nfs/nfs-web-rc.yaml
@@ -16,14 +16,14 @@ spec:
     spec:
       containers:
       - name: web
-        image: nginx
+        image: hypriot/rpi-busybox-httpd
         ports:
           - name: web
             containerPort: 80
         volumeMounts:
             # name must match the volume name below
             - name: nfs
-              mountPath: "/usr/share/nginx/html"
+              mountPath: "/www"
       volumes:
       - name: nfs
         persistentVolumeClaim:
